[gd_scene load_steps=5 format=2]

[ext_resource path="res://world.gd" type="Script" id=1]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 100.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 20.0
scale_random = 1.0
scale_curve = SubResource( 2 )
color = Color( 1, 1, 1, 0.392157 )

[node name="world" type="Node2D"]
script = ExtResource( 1 )

[node name="ui" type="Panel" parent="."]
margin_left = 960.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="margin" type="MarginContainer" parent="ui"]
margin_left = 20.0
margin_top = 20.0
margin_right = 940.0
margin_bottom = 1060.0
size_flags_horizontal = 3

[node name="ui_vbox" type="VBoxContainer" parent="ui/margin"]
margin_right = 920.0
margin_bottom = 1040.0

[node name="ui_hbox" type="HBoxContainer" parent="ui/margin/ui_vbox"]
margin_right = 920.0
margin_bottom = 916.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="particles_vbox" type="VBoxContainer" parent="ui/margin/ui_vbox/ui_hbox"]
margin_right = 448.0
margin_bottom = 916.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="particles_heading" type="Label" parent="ui/margin/ui_vbox/ui_hbox/particles_vbox"]
margin_right = 448.0
margin_bottom = 14.0
text = "Particles"
align = 1

[node name="hseperator" type="HSeparator" parent="ui/margin/ui_vbox/ui_hbox/particles_vbox"]
modulate = Color( 0.613281, 0.407257, 0.407257, 1 )
margin_top = 18.0
margin_right = 448.0
margin_bottom = 22.0

[node name="particles_menu" type="GridContainer" parent="ui/margin/ui_vbox/ui_hbox/particles_vbox"]
editor/display_folded = true
margin_top = 26.0
margin_right = 448.0
margin_bottom = 246.0
columns = 2

[node name="emitting_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/particles_vbox/particles_menu"]
margin_top = 5.0
margin_right = 222.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "emitting"

[node name="emitting" type="CheckBox" parent="ui/margin/ui_vbox/ui_hbox/particles_vbox/particles_menu"]
margin_left = 226.0
margin_right = 448.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
pressed = true
text = "On"
align = 1

[node name="amount_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/particles_vbox/particles_menu"]
margin_top = 33.0
margin_right = 222.0
margin_bottom = 47.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "amount"

[node name="amount" type="LineEdit" parent="ui/margin/ui_vbox/ui_hbox/particles_vbox/particles_menu"]
margin_left = 226.0
margin_top = 28.0
margin_right = 448.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "1000"
align = 1

[node name="lifetime_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/particles_vbox/particles_menu"]
margin_top = 61.0
margin_right = 222.0
margin_bottom = 75.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "lifetime"

[node name="lifetime" type="LineEdit" parent="ui/margin/ui_vbox/ui_hbox/particles_vbox/particles_menu"]
margin_left = 226.0
margin_top = 56.0
margin_right = 448.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "3"
align = 1

[node name="one_shot_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/particles_vbox/particles_menu"]
margin_top = 89.0
margin_right = 222.0
margin_bottom = 103.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "one_shot"

[node name="one_shot" type="CheckBox" parent="ui/margin/ui_vbox/ui_hbox/particles_vbox/particles_menu"]
margin_left = 226.0
margin_top = 84.0
margin_right = 448.0
margin_bottom = 108.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "On"
align = 1

[node name="preprocess_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/particles_vbox/particles_menu"]
margin_top = 117.0
margin_right = 222.0
margin_bottom = 131.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "preprocess"

[node name="preprocess" type="LineEdit" parent="ui/margin/ui_vbox/ui_hbox/particles_vbox/particles_menu"]
margin_left = 226.0
margin_top = 112.0
margin_right = 448.0
margin_bottom = 136.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "0.1"
align = 1

[node name="speed_scale_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/particles_vbox/particles_menu"]
margin_top = 145.0
margin_right = 222.0
margin_bottom = 159.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "speed_scale"

[node name="speed_scale" type="LineEdit" parent="ui/margin/ui_vbox/ui_hbox/particles_vbox/particles_menu"]
margin_left = 226.0
margin_top = 140.0
margin_right = 448.0
margin_bottom = 164.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "1"
align = 1

[node name="explosiveness_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/particles_vbox/particles_menu"]
margin_top = 173.0
margin_right = 222.0
margin_bottom = 187.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "explosiveness"

[node name="explosiveness" type="LineEdit" parent="ui/margin/ui_vbox/ui_hbox/particles_vbox/particles_menu"]
margin_left = 226.0
margin_top = 168.0
margin_right = 448.0
margin_bottom = 192.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "1"
align = 1

[node name="randomness_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/particles_vbox/particles_menu"]
margin_top = 201.0
margin_right = 222.0
margin_bottom = 215.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "randomness"

[node name="randomness" type="LineEdit" parent="ui/margin/ui_vbox/ui_hbox/particles_vbox/particles_menu"]
margin_left = 226.0
margin_top = 196.0
margin_right = 448.0
margin_bottom = 220.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "1"
align = 1

[node name="vseperator" type="VSeparator" parent="ui/margin/ui_vbox/ui_hbox"]
modulate = Color( 0.613281, 0.407257, 0.407257, 1 )
margin_left = 458.0
margin_right = 462.0
margin_bottom = 916.0

[node name="material_vbox" type="VBoxContainer" parent="ui/margin/ui_vbox/ui_hbox"]
margin_left = 472.0
margin_right = 920.0
margin_bottom = 916.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="material_heading" type="Label" parent="ui/margin/ui_vbox/ui_hbox/material_vbox"]
margin_right = 448.0
margin_bottom = 14.0
text = "Material"
align = 1

[node name="hseperator" type="HSeparator" parent="ui/margin/ui_vbox/ui_hbox/material_vbox"]
modulate = Color( 0.613281, 0.407257, 0.407257, 1 )
margin_top = 18.0
margin_right = 448.0
margin_bottom = 22.0

[node name="material_menu" type="GridContainer" parent="ui/margin/ui_vbox/ui_hbox/material_vbox"]
margin_top = 26.0
margin_right = 448.0
margin_bottom = 386.0
columns = 2

[node name="sphere_radius_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_top = 5.0
margin_right = 222.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "sphere_radius"

[node name="sphere_radius" type="LineEdit" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_left = 226.0
margin_right = 448.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "350"
align = 1

[node name="flag_align_y_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_top = 33.0
margin_right = 222.0
margin_bottom = 47.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "flag_align_y"

[node name="flag_align_y" type="CheckBox" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_left = 226.0
margin_top = 28.0
margin_right = 448.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "On"
align = 1

[node name="spread_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_top = 61.0
margin_right = 222.0
margin_bottom = 75.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "spread"

[node name="spread" type="LineEdit" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_left = 226.0
margin_top = 56.0
margin_right = 448.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "45"
align = 1

[node name="gravity_x_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_top = 89.0
margin_right = 222.0
margin_bottom = 103.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "gravity_x"

[node name="gravity_x" type="LineEdit" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_left = 226.0
margin_top = 84.0
margin_right = 448.0
margin_bottom = 108.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "0"
align = 1
placeholder_text = "x"

[node name="gravity_y_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_top = 117.0
margin_right = 222.0
margin_bottom = 131.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "gravity_y"

[node name="gravity_y" type="LineEdit" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_left = 226.0
margin_top = 112.0
margin_right = 448.0
margin_bottom = 136.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "0"
align = 1
placeholder_text = "x"

[node name="scale_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_top = 145.0
margin_right = 222.0
margin_bottom = 159.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "scale"

[node name="scale" type="LineEdit" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_left = 226.0
margin_top = 140.0
margin_right = 448.0
margin_bottom = 164.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "20"
align = 1

[node name="scale_random_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_top = 173.0
margin_right = 222.0
margin_bottom = 187.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "scale_random"

[node name="scale_random" type="LineEdit" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_left = 226.0
margin_top = 168.0
margin_right = 448.0
margin_bottom = 192.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "1"
align = 1

[node name="scale_curve_min_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_top = 201.0
margin_right = 222.0
margin_bottom = 215.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "scale_curve_min"

[node name="scale_curve_min" type="LineEdit" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_left = 226.0
margin_top = 196.0
margin_right = 448.0
margin_bottom = 220.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "1"
align = 1

[node name="scale_curve_max_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_top = 229.0
margin_right = 222.0
margin_bottom = 243.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "scale_curve_max"

[node name="scale_curve_max" type="LineEdit" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_left = 226.0
margin_top = 224.0
margin_right = 448.0
margin_bottom = 248.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "0"
align = 1

[node name="color_r8_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_top = 257.0
margin_right = 222.0
margin_bottom = 271.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "color_r8"

[node name="color_r8" type="LineEdit" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_left = 226.0
margin_top = 252.0
margin_right = 448.0
margin_bottom = 276.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "255"
align = 1

[node name="color_g8_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_top = 285.0
margin_right = 222.0
margin_bottom = 299.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "color_g8"

[node name="color_g8" type="LineEdit" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_left = 226.0
margin_top = 280.0
margin_right = 448.0
margin_bottom = 304.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "255"
align = 1

[node name="color_b8_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_top = 313.0
margin_right = 222.0
margin_bottom = 327.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "color_b8"

[node name="color_b8" type="LineEdit" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_left = 226.0
margin_top = 308.0
margin_right = 448.0
margin_bottom = 332.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "255"
align = 1

[node name="color_a8_caption" type="Label" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_top = 341.0
margin_right = 222.0
margin_bottom = 355.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "color_a8"

[node name="color_a8" type="LineEdit" parent="ui/margin/ui_vbox/ui_hbox/material_vbox/material_menu"]
margin_left = 226.0
margin_top = 336.0
margin_right = 448.0
margin_bottom = 360.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "255"
align = 1

[node name="hseperator" type="HSeparator" parent="ui/margin/ui_vbox"]
modulate = Color( 0.613281, 0.407257, 0.407257, 1 )
margin_top = 920.0
margin_right = 920.0
margin_bottom = 924.0

[node name="buttons_hbox" type="HBoxContainer" parent="ui/margin/ui_vbox"]
editor/display_folded = true
margin_top = 928.0
margin_right = 920.0
margin_bottom = 948.0

[node name="set_button" type="Button" parent="ui/margin/ui_vbox/buttons_hbox"]
margin_right = 304.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "Set values"

[node name="restart_button" type="Button" parent="ui/margin/ui_vbox/buttons_hbox"]
margin_left = 308.0
margin_right = 612.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "Restart particles"

[node name="reset_button" type="Button" parent="ui/margin/ui_vbox/buttons_hbox"]
margin_left = 616.0
margin_right = 920.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "Reset values"

[node name="hseperator2" type="HSeparator" parent="ui/margin/ui_vbox"]
modulate = Color( 0.613281, 0.407257, 0.407257, 1 )
margin_top = 952.0
margin_right = 920.0
margin_bottom = 956.0

[node name="random_hbox" type="HBoxContainer" parent="ui/margin/ui_vbox"]
margin_top = 960.0
margin_right = 920.0
margin_bottom = 1040.0

[node name="random_timer_button" type="CheckBox" parent="ui/margin/ui_vbox/random_hbox"]
margin_right = 458.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "Set by Timer"
align = 1

[node name="settings_grid" type="GridContainer" parent="ui/margin/ui_vbox/random_hbox"]
margin_left = 462.0
margin_right = 920.0
margin_bottom = 80.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 3
columns = 2

[node name="wait_time_caption" type="Label" parent="ui/margin/ui_vbox/random_hbox/settings_grid"]
margin_top = 5.0
margin_right = 227.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "wait_time"
align = 1

[node name="wait_time" type="LineEdit" parent="ui/margin/ui_vbox/random_hbox/settings_grid"]
margin_left = 231.0
margin_right = 458.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "3"
align = 1

[node name="particles_caption" type="Label" parent="ui/margin/ui_vbox/random_hbox/settings_grid"]
margin_top = 33.0
margin_right = 227.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "random particles"
align = 1

[node name="particles" type="CheckBox" parent="ui/margin/ui_vbox/random_hbox/settings_grid"]
margin_left = 231.0
margin_top = 28.0
margin_right = 458.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
pressed = true
text = "On"
align = 1

[node name="material_caption" type="Label" parent="ui/margin/ui_vbox/random_hbox/settings_grid"]
margin_top = 61.0
margin_right = 227.0
margin_bottom = 75.0
size_flags_horizontal = 3
text = "random material"
align = 1

[node name="material" type="CheckBox" parent="ui/margin/ui_vbox/random_hbox/settings_grid"]
margin_left = 231.0
margin_top = 56.0
margin_right = 458.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
text = "On"
align = 1

[node name="particles" type="Particles2D" parent="."]
position = Vector2( 490, 540 )
emitting = false
amount = 1
preprocess = 0.1
explosiveness = 1.0
process_material = SubResource( 3 )

[node name="random_timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="button_up" from="ui/margin/ui_vbox/buttons_hbox/set_button" to="." method="_on_set_button_button_up"]
[connection signal="button_up" from="ui/margin/ui_vbox/buttons_hbox/restart_button" to="." method="_on_restart_button_button_up"]
[connection signal="button_up" from="ui/margin/ui_vbox/buttons_hbox/reset_button" to="." method="_on_reset_button_button_up"]
[connection signal="toggled" from="ui/margin/ui_vbox/random_hbox/random_timer_button" to="." method="_on_random_timer_button_toggled"]
[connection signal="timeout" from="random_timer" to="." method="_on_random_timer_timeout"]
